--- a/divulgacion/index.html
+++ b/divulgacion/index.html
@@ -18,7 +18,9 @@
     <link rel="stylesheet" href="../css/divulgacion.css">
     <link rel="stylesheet" type="text/css" href="../slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="../slick/slick-theme.css" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"         crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+        integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <script src="../js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="../slick/slick.js"></script>
 </head>
@@ -74,8 +76,8 @@
             <h5>ADMAS</h5>
             <h6>Dr. Javier Izquierdo Reyes</h6>
             <ul>
-				<li><a href="https://ieeexplore.ieee.org/document/8743135" target="_blank">
-					2019 | Perspective of Autonomous Driving in Mexico </a></li>
+                <li><a href="https://ieeexplore.ieee.org/document/8743135" target="_blank">
+                        2019 | Perspective of Autonomous Driving in Mexico </a></li>
                 <br />
                 <li><a href="https://link.springer.com/article/10.1007/s12008-018-0473-9" target="_blank">2018 |
                         Emotion recognition for semi-autonomous vehicles framework</a></li>
@@ -96,9 +98,9 @@
                         target="_blank">2016 | Review of Passive BCI framework for Advanced Driver Assistance Systems
                         in Intelligent
                         Transportation </a></li>
-				 <br />
-				<li><a href="https://ieeexplore.ieee.org/document/8363378" target="_blank">
-					2011 |  An industry-academia model for research </a></li>
+                <br />
+                <li><a href="https://ieeexplore.ieee.org/document/8363378" target="_blank">
+                        2011 | An industry-academia model for research </a></li>
                 <br />
 
             </ul>
@@ -106,8 +108,13 @@
         <div class="content-bar">
             <h1> </h1>
             <h5> </h5>
-            <h6>Msc. Luis ALberto Curiel Ramírez</h6>
+            <h6>Msc. Luis Alberto Curiel Ramírez</h6>
             <ul>
+                <li><a href="https://link.springer.com/article/10.1007/s12008-019-00619-x" target="_blank"> 2019 | Hardware in the loop framework proposal for a semi-autonomous car architecture in a closed route environment</a></li>
+                <br />
+                <li><a href="https://ieeexplore.ieee.org/document/8743141/" target="_blank">
+                        2019 | Analysis and Approach of Semi-Autonomous Driving Architectures</a></li>
+                <br />
                 <li><a href="https://link.springer.com/article/10.1007/s12008-018-0465-9" target="_blank">2018 |
                         Towards of a
                         modular framework for semi-autonomous driving assistance systems</a></li>
@@ -120,92 +127,91 @@
                 <li><a href="https://www.researchgate.net/publication/310795277_ADMAS_Project_Driver_Learning_Algorithm_and_Driving_Simulator_ITSE_Luis_Alberto_Curiel_Ramirez_Advisors_Ing_Javier_Izquierdo_Reyes_Dr_Martin_Rogelio_Bustamante_Bello"
                         target="_blank">2016 | ADMAS Project: Driver Learning Algorithm and Driving Simulator ITSE Luis
                         Alberto
-                        Curiel Ramirez Advisors: Dr. Javier Izquierdo Reyes. Dr. Martín Rogelio Bustamante Bello.</a></li>
+                        Curiel Ramirez Advisors: Dr. Javier Izquierdo Reyes. Dr. Martín Rogelio Bustamante Bello.</a>
+                </li>
 
-					 <br />
-				<li><a href="https://ieeexplore.ieee.org/document/8743141/" target="_blank">
-					2019 | Analysis and Approach of Semi-Autonomous Driving Architectures</a></li>
                 <br />
             </ul>
 
 
         </div>
-		<!-- EQUIPO-->
+        <!-- EQUIPO-->
         <br>
         <div class="content-bar">
             <h5>Domótica Emocional</h5>
             <!-- autor-->
-			<h6>Dr. Sergio Alberto Navarro Tuch</h6>
+            <h6>Dr. Sergio Alberto Navarro Tuch</h6>
             <ul>
-				<li><a href = "https://link.springer.com/article/10.1007/s12008-019-00598-z?wt_mc=Internal.Event.1.SEM.ArticleAuthorOnlineFirst&utm_source=ArticleAuthorOnlineFirst&utm_medium=email&utm_content=AA_en_06082018&ArticleAuthorOnlineFirst_20190606" target="_blank">2019 | Emotional Domotics: a system and experimental model development for UX implementations</a></li>
-				<br>
+                <li><a href="https://link.springer.com/article/10.1007/s12008-019-00598-z?wt_mc=Internal.Event.1.SEM.ArticleAuthorOnlineFirst&utm_source=ArticleAuthorOnlineFirst&utm_medium=email&utm_content=AA_en_06082018&ArticleAuthorOnlineFirst_20190606"
+                        target="_blank">2019 | Emotional Domotics: a system and experimental model development for UX
+                        implementations</a></li>
+                <br>
+                <li><a href="https://ieeexplore.ieee.org/document/8743129/" target="_blank">
+                        2019 | Variation of Facial Expression Produced by Acoustic Stimulization</a></li>
+                <br />
+                <li><a href="http://rdcu.be/tJ2X" target="_blank">2018 | Inhabitable space control for the creation of
+                        healthy
+                        interactive spaces through emotional domotics</a></li>
+                <br />
                 <li><a href="https://link.springer.com/chapter/10.1007/978-3-319-56994-9_70" target="_blank">2017 |
                         Emotional
                         Domotics: Inhabitable Space Variable Control for the Emotions Modulation</a></li>
                 <br>
                 <li><a href="https://link.springer.com/chapter/10.1007/978-3-319-69266-1_11" target="_blank">2017 |
                         Emotional
-                        Domotics: Inhabitable Home Automation System for Emotion Modulation Through Facial Analysis</a></li>
+                        Domotics: Inhabitable Home Automation System for Emotion Modulation Through Facial Analysis</a>
+                </li>
                 <br>
-                <li><a href="http://rdcu.be/tJ2X" target="_blank">2018 | Inhabitable space control for the creation of
-                        healthy
-                        interactive spaces through emotional domotics</a></li>
-
-				<!--Plantilla Art -->
-				 <br />
-				<li><a href="https://ieeexplore.ieee.org/document/8743129/" target="_blank">
-					2019 | Variation of Facial Expression Produced by Acoustic Stimulization</a></li>
-                <br />
-
-				<!--Plantilla Art -->
-
             </ul>
-			<!-- autor-->
+            <!-- autor-->
 
-			<h6>Ing. Ariel Alejandro Lopez Aguilar</h6>
+            <h6>Ing. Ariel Alejandro Lopez Aguilar</h6>
             <ul>
-               <!--Plantilla Art -->
-				 <br />
-				<li><a href="https://ieeexplore.ieee.org/document/8743117/" target="_blank">
-					2019 | Interpretation and Emulation for Telegrams of the KNX Standard on MATLAB Simulink</a></li>
+                <!--Plantilla Art -->
+                <br />
+                <li><a href="https://ieeexplore.ieee.org/document/8743117/" target="_blank">
+                        2019 | Interpretation and Emulation for Telegrams of the KNX Standard on MATLAB Simulink</a>
+                </li>
                 <br />
 
-				<!--Plantilla Art -->
+                <!--Plantilla Art -->
 
             </ul>
         </div>
-		<!-- EQUIPO-->
+        <!-- EQUIPO-->
 
-		<!-- EQUIPO-->
+        <!-- EQUIPO-->
         <br>
         <div class="content-bar">
             <h5>Otros </h5>
             <!-- autor-->
-			<h6>Otros Artículos</h6>
+            <h6>Otros Artículos</h6>
             <ul>
-				 <br />
-				<li><a href="https://ieeexplore.ieee.org/document/8743133/" target="_blank">
-					2019 | Reduction of Stress Levels and Increased Productivity Inside Offices Using Emotional Domotics</a></li>
+                <br />
+                <li><a href="https://ieeexplore.ieee.org/document/8743133/" target="_blank">
+                        2019 | Reduction of Stress Levels and Increased Productivity Inside Offices Using Emotional
+                        Domotics</a></li>
                 <br />
 
-				<li><a href="https://ieeexplore.ieee.org/document/8743136/" target="_blank">
-					2019 | Environmental Impact for Labor Stations Learning through Emotional Domotics Analysis and Workstation Simulation</a></li>
+                <li><a href="https://ieeexplore.ieee.org/document/8743136/" target="_blank">
+                        2019 | Environmental Impact for Labor Stations Learning through Emotional Domotics Analysis and
+                        Workstation Simulation</a></li>
 
 
-				<!--Plantilla Art -->
-				 <br />
-				<li><a href="https://ieeexplore.ieee.org/document/8743138/" target="_blank">
-					2019 | Smart Backpack ABE</a></li>
+                <!--Plantilla Art -->
+                <br />
+                <li><a href="https://ieeexplore.ieee.org/document/8743138/" target="_blank">
+                        2019 | Smart Backpack ABE</a></li>
                 <br />
 
-				<!--Plantilla Art -->
+                <!--Plantilla Art -->
 
             </ul>
-			<!-- autor-->
+            <!-- autor-->
         </div>
-		<!-- EQUIPO-->
+        <!-- EQUIPO-->
     </div>
-    
+
     <footer>
         <div class="footer-left">
             <a href="https://tec.mx/es" target="_blank"><img src="../img/logos/logo-tec-largo.png"></a>
@@ -232,7 +238,8 @@
                 <li><a>Correo: rbustama@itesm.mx</a></li>
                 <li class="contact-socials">
                     <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                    <a href="https://www.researchgate.net/profile/Rogelio_Bustamante-Bello" target="_blank"><i class="fab fa-researchgate"></i></a>
+                    <a href="https://www.researchgate.net/profile/Rogelio_Bustamante-Bello" target="_blank"><i
+                            class="fab fa-researchgate"></i></a>
                 </li>
             </ul>
         </div>
