--- a/equipo/estudiantes.html
+++ b/equipo/estudiantes.html
@@ -2,52 +2,62 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CIMB</title>
-    <meta name="description" content="Acerca de todos los proyectos que se manejan en el CIMB">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
-    <link rel='stylesheet' href='../css/navbar.css'>
-    <link rel='stylesheet' href='../css/inicio.css'>
-    <link rel="stylesheet" href="../css/proyectos.css">
-    <link rel="stylesheet" href="../css/colaborador.css">
-    <link rel="stylesheet" href="../css/slider.css">
-   
-    <link rel="icon" type="image/png" href="../img/icons/favicon.png">
-<link rel="stylesheet" href="../css/footer.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"         crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>CIMB</title>
+  <meta name="description" content="Acerca de todos los proyectos que se manejan en el CIMB">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+  <link rel='stylesheet' href='../css/navbar.css'>
+  <link rel='stylesheet' href='../css/inicio.css'>
+  <link rel="stylesheet" href="../css/proyectos.css">
+  <link rel="stylesheet" href="../css/colaborador.css">
+  <link rel="stylesheet" href="../css/slider.css">
+
+  <link rel="icon" type="image/png" href="../img/icons/favicon.png">
+  <link rel="stylesheet" href="../css/footer.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+    integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 </head>
 
-<body> <nav class="navbar">
-  <div class="navbar-brand"> <a class="navbar-item" href="./index.html"><img id="logo-cimb" src="../img/logos/logo-cimb.png" /></a>
-    <div data-target="mainNav" class="navbar-burger burger">&nbsp;
+<body>
+  <nav class="navbar">
+    <div class="navbar-brand"> <a class="navbar-item" href="./index.html"><img id="logo-cimb"
+          src="../img/logos/logo-cimb.png" /></a>
+      <div data-target="mainNav" class="navbar-burger burger">&nbsp;
 
+      </div>
     </div>
-  </div>
-  <div id="mainNav" class="navbar-menu">
-    <div class="navbar-start">&nbsp;
+    <div id="mainNav" class="navbar-menu">
+      <div class="navbar-start">&nbsp;
 
+      </div>
+      <div class="navbar-end"> <a class="navbar-item" href="../index.html"> Inicio
+        </a> <a class="navbar-item" href="../proyectos/index.html"> Proyectos
+        </a> <a class="navbar-item" href="../videos/index.html"> Videos
+        </a> <a class="navbar-item" href="../divulgacion/index.html"> Divulgación
+        </a> <a class="navbar-item" href="../equipo/index.html"> Equipo de Investigación
+        </a> <a class="navbar-item" href="../contacto/index.html"> Contacto
+        </a>
+        <a class="navbar-item" href="../blog/index.html"> Blog </a>
+        <a class="navbar-item" href="estudiantes-eng.html"> Eng/Esp</a>
+      </div>
     </div>
-    <div class="navbar-end"> <a class="navbar-item" href="../index.html">                    Inicio
-                </a> <a class="navbar-item" href="../proyectos/index.html">                    Proyectos
-                </a> <a class="navbar-item" href="../videos/index.html">                    Videos
-                </a> <a class="navbar-item" href="../divulgacion/index.html">                    Divulgación
-                </a> <a class="navbar-item" href="../equipo/index.html">                    Equipo de Investigación
-                </a> <a class="navbar-item" href="../contacto/index.html">                    Contacto
-                </a>
-                <a class="navbar-item" href="../blog/index.html"> Blog    </a>
-                <a class="navbar-item" href="estudiantes-eng.html">                    Eng/Esp</a>
-    </div>
-  </div> </nav> <header class="breadcrumbs">
-  <ul>
-    <li><a href="./index.html">Equipo de Investigación</a></li>
-    <li><a href="./agradecimientos.html">Agradecimientos</a></li>
-    <li><a href="./integrantes.html"><b>Estudiantes</b></a></li>
-  </ul> </header>
+  </nav>
+  <header class="breadcrumbs">
+    <ul>
+      <li><a href="./index.html">Equipo de Investigación</a></li>
+      <li><a href="./agradecimientos.html">Agradecimientos</a></li>
+      <li><a href="./integrantes.html"><b>Estudiantes</b></a></li>
+    </ul>
+  </header>
 
-  <div class="content no-slider"> <h4>Estudiantes</h4>
-    <p>Todos los estudiantes que se han involucrado en el CIMB.</p> <h5>Diseño Web</h5>
+  <div class="content no-slider">
+    <h4>Estudiantes</h4>
+    <p>Todos los estudiantes que se han involucrado en el CIMB.</p>
+    <h5>Diseño Web</h5>
+
     <div class="columns">
       <div class="column is-one-third">
         <ul>
@@ -68,7 +78,33 @@
           <li>José Miguel Gallardo Tabares</li>
         </ul>
       </div>
-    </div> <h5>ADMAS</h5> <b>Enero 2019</b>
+    </div>
+
+    <div class="columns">
+      <div class="column is-one-third">
+        <ul>
+          <li>Jorge Espinosa</li>
+          <li>Carlos Aguirre Orozco</li>
+          <li>Axel Octavio Meinguer Estrada</li>
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <ul>
+          <li>Kai Kawasaki Ueda</li>
+          <li>Juan Carlos Pichardo Vicencio</li>
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <ul>
+          <li>Rafael Enrique Fierro Mendez</li>
+          <li>José Miguel Gallardo Tabares</li>
+        </ul>
+      </div>
+    </div>
+
+
+
+    <h5>ADMAS</h5> <b>Enero 2019</b>
     <div class="columns">
       <div class="column is-one-third">
         <ul>
@@ -347,7 +383,8 @@
           <li>Gilberto Quiróz Valdez</li>
         </ul>
       </div>
-    </div> <h5>Domótica Emocional</h5> <b>Enero 2019</b>
+    </div>
+    <h5>Domótica Emocional</h5> <b>Enero 2019</b>
     <div class="columns">
       <div class="column is-one-third">
         <ul>
@@ -527,7 +564,8 @@
           <li>Alejandro Contreras Sánchez</li>
         </ul>
       </div>
-    </div> <h5>ExoDUX</h5> <b>Enero 2019</b>
+    </div>
+    <h5>ExoDUX</h5> <b>Enero 2019</b>
     <div class="columns">
       <div class="column is-one-third">
         <ul>
@@ -600,32 +638,69 @@
         </ul>
       </div>
     </div>
-  </div> 
+    <h5>Alumnos Internacionales</h5>
+    <div class="columns">
+      <div class="column is-one-third">
+        <b>UNIVERSIDAD POLITECNICA DE CATALUNYA - ESPAÑA</b>
+        <ul>
+          <li>Roger Climent Semper</li>
+        </ul>
+        <b>MASSACHUSETTS INSTITUTE OF TECHNOLOGY - USA</b>
+        <ul>
+          <li>Anshula Gandhi</li>
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <b>UNIVERSIDAD JULIO GARABITO - COLOMBIA</b>
+        <ul>
+          <li>Kevin Roger Cardenas Mogollon</li>
+          <li>Laura Camila Loaiza Carbajal</li>
+          <li>Fitzgerald Leonard Gerardo Toro Quitian</li>
+          <li>Brayan Camilo Castro Sanchez</li>
+        </ul>
+      </div>
 
-<footer>
-  <div class="footer-left"> <a target="_blank" href="https://tec.mx/es"><img src="../img/logos/logo-tec-largo.png" /></a> <a href="../index.html"><img src="../img/logos/logo-cimb.png" /></a>
+      <div class="column is-one-third">
+        <b>UNIVERSIDAD POLITECNICA DE VALENCIA - ESPAÑA</b>
+        <ul>
+          <li>Juan Gascón Repullés</li>
+          <li>Eloy Pascual Belda</li>
+        </ul>
+      </div>
+    </div>
   </div>
-  <div class="footer-center"> <h3>Mapa del sitio</h3>
-    <ul>
-      <li><a href="../index.html">Inicio</a></li>
-      <li><a href="../proyectos/index.html">Proyectos</a></li>
-      <li><a href="../videos/index.html">Videos</a></li>
-      <li><a href="../divulgacion/index.html">Divulgación</a></li>
-      <li><a href="./index.html">Equipo de Investigación</a></li>
-      <li><a href="../contacto/index.html">Contacto</a></li>
-      <li><a href="../blog/index.html">Blog</a></li>
-    </ul>
-  </div>
-  <div class="footer-right"> <h3>Contacto</h3>
-    <ul>
-      <li>Calle del Puente #222 Col. Ejidos de Huipulco, Tlalpan C.P. 14380, México D.F.</li>
-      <li><a>Dr. Martín Rogelio Bustamante Bello</a></li>
-      <li><a>Cel: 553075 1447</a></li>
-      <li><a>Correo: rbustama@itesm.mx</a></li>
-      <li class="contact-socials"> <a target="_blank" href="https://www.facebook.com">&nbsp;</a> <a target="_blank" href="https://www.researchgate.net/profile/Rogelio_Bustamante-Bello">&nbsp;</a> </li>
-    </ul>
-  </div> </footer>
-<p class="trademark">Instituto Tecnológico y de Estudios Superiores de Monterrey. México 2018.</p> </body>
+
+  <footer>
+    <div class="footer-left"> <a target="_blank" href="https://tec.mx/es"><img
+          src="../img/logos/logo-tec-largo.png" /></a> <a href="../index.html"><img
+          src="../img/logos/logo-cimb.png" /></a>
+    </div>
+    <div class="footer-center">
+      <h3>Mapa del sitio</h3>
+      <ul>
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="../proyectos/index.html">Proyectos</a></li>
+        <li><a href="../videos/index.html">Videos</a></li>
+        <li><a href="../divulgacion/index.html">Divulgación</a></li>
+        <li><a href="./index.html">Equipo de Investigación</a></li>
+        <li><a href="../contacto/index.html">Contacto</a></li>
+        <li><a href="../blog/index.html">Blog</a></li>
+      </ul>
+    </div>
+    <div class="footer-right">
+      <h3>Contacto</h3>
+      <ul>
+        <li>Calle del Puente #222 Col. Ejidos de Huipulco, Tlalpan C.P. 14380, México D.F.</li>
+        <li><a>Dr. Martín Rogelio Bustamante Bello</a></li>
+        <li><a>Cel: 553075 1447</a></li>
+        <li><a>Correo: rbustama@itesm.mx</a></li>
+        <li class="contact-socials"> <a target="_blank" href="https://www.facebook.com">&nbsp;</a> <a target="_blank"
+            href="https://www.researchgate.net/profile/Rogelio_Bustamante-Bello">&nbsp;</a> </li>
+      </ul>
+    </div>
+  </footer>
+  <p class="trademark">Instituto Tecnológico y de Estudios Superiores de Monterrey. México 2018.</p>
+</body>
 
 <script src="../js/navbar.js"></script>
 <script src="../js/slider.js"></script>
