Solve GH-19, Correct Readme

--- a/proyectos/index-eng.html
+++ b/proyectos/index-eng.html
@@ -506,6 +506,71 @@
         <a>Msc. Luis Alberto Curiel Ramirez</a>
       </div>
     </div>
+    <div id="AVA">
+      <div class="col-7">
+        <p class="title">Avatar 2.0</p>
+        <div class="fader"></div>
+      </div>
+      <div class="info">
+        <p>The project seeks to develop virtual assistant systems (avatars) with the ability to interact with
+          the user. The objective of the assistant is to serve as an interface of interaction between the
+          user and the digital systems that allow him to control his electronics, relying on trends such as
+          the Internet of Things (IoT), or provide company and user support. The latter is based on the
+          global population aging, a situation by which the average age of the population increases, this
+          ageing results in the increase in cases of deterioration in advanced age such as depression
+          resulting from abandonment. It is in this framework that the avatar seeks to serve as a moral
+          support to the individual, as well as an assistant and interpreter between the user and the new
+          technology.
+        </p>
+
+        <p>Digital animation platforms are integrated into the development of the project, with user interface systems
+          such as Microsoft&#39; s Kinect™ ™ with Eye Tracking systems as well as computational vision components such
+          as OpenCV and machine learning tools. The project involves students from various disciplines such as
+          Animation, Computing, Telecommunication, etc.</p>
+
+
+
+          <!-- DUMMIED OUT UNTIL DEVELOPER OR CONTRIBUTORS ADDED -->
+        <!-- <h3 class="subtitle">Developer</h3>
+        <div class="colaborador-wrapper">
+          <div class="colaborador-tarjeta">
+            <div class="colaborador-imagen"> <img src="../img/colaboradores/EdgarCorte.jpg" />
+            </div>
+            <div class="colaborador-detalles">
+              <h3 class="colaborador-nombre">Edgar Cortés Gallardo Medina</h3>
+              <p class="colaborador-rol">Developer</p>
+              <hr class="colaborador-separacion" />
+              <div class="colaborador-contacto">&nbsp;
+              </div>
+              <p id="edgarmed" class="mobile colaborador-biografia"> Edgar Cortés Gallardo Medina was born in CDMX on
+                September 22, 1997. He is studying a degree in Mechatronic Engineering at the Tecnológico de Monterrey.
+                He is currently developing a vehicular platform for the development of intelligent algorithms in
+                engineering and research projects at the Research Center in Microsystems and Biodesign. His areas of
+                interest are Artificial Intelligence applied to the partial and total assistance in an intelligent
+                vehicle, the fusion of data and sensors, and the area of opportunity presented by these new technologies
+                in the internet of vehicles.
+              </p>
+            </div>
+            <div class="show-more-wrapper mobile">
+              <div data-colaborador="edgarmed" class="show-more-button">Read More <img
+                  src="../img/icons/icon-cheveron-down.svg" />
+              </div>
+            </div>
+          </div>
+          <p class="desktop colaborador-biografia">Edgar Cortés Gallardo Medina was born in CDMX on September 22, 1997.
+            He is studying a degree in Mechatronic Engineering at the Tecnológico de Monterrey. He is currently
+            developing a vehicular platform for the development of intelligent algorithms in engineering and research
+            projects at the Research Center in Microsystems and Biodesign. His areas of interest are Artificial
+            Intelligence applied to the partial and total assistance in an intelligent vehicle, the fusion of data and
+            sensors, and the area of opportunity presented by these new technologies in the internet of vehicles.
+          </p>
+        </div>
+        <h3 class="subtitle">Supervisor</h3> <a href="../contacto/index.html">Dr. Rogelio Bustamente Bello</a>
+        <a>Dr. Javier Izquierdo Reyes</a>
+        <a>Msc. Israel Cayetano</a>
+        <a>Msc. Luis Alberto Curiel Ramirez</a> -->
+      </div>
+    </div>
   </div>
   <footer>
     <div class="footer-left"> <a target="_blank" href="https://tec.mx/es"><img
