--- a/proyectos/index.html
+++ b/proyectos/index.html
@@ -647,6 +647,72 @@
       </div>
     </div>
     <!-- Plantilla -->
+    <div id="AVA">
+      <div class="col-7">
+        <p class="title">Avatar 2.0</p>
+        <div class="fader"></div>
+      </div>
+      <div class="info">
+        <p>
+          El proyecto busca desarrollar sistemas de asistentes virtuales (avatares) con capacidad de
+          interacción con el usuario. El objetivo del asistente es servir como una interfaz de interacción
+          entre el usuario y los sistemas digitales que le permitan controlar sus electrónicos, apoyándose de
+          tendencias como el internet de las cosas (IoT), o brindar compañía y soporte al usuario. Esta
+          última se basa en la tendencia de geriatrización de la población global, situación por la cual la
+          edad promedio de la población aumenta, dicho envejecimiento trae como consecuencia el
+          aumento de casos de deterioro de la edad avanzada como es la depresión derivada de un
+          abandono. Es en este marco que el avatar, busca fungir como un apoyo moral al individuo, así
+          como un asistente e interprete entre el usuario y la nueva tecnología.
+        </p>
+        <p>
+          Para el desarrollo del proyecto se integran plataformas de animación digital, con sistemas de
+          interfaz de usuario tales como el Kinect™ de Microsoft™ con sistemas de seguimiento de la
+          mirada (Eye Tracking) así como componentes de visión computacional tales como OpenCV y
+          herramientas de aprendizaje de máquina. En el proyecto participan alumnos de diversas
+          disciplinas tales como Animación, Computación, Telecomunicación, etc.
+        </p>
+
+        <!-- DUMMIED OUT UNTIL DEVELOPER OR CONTRIBUTORS ADDED -->
+        <!-- <h3 class="subtitle">Developer</h3>
+        <div class="colaborador-wrapper">
+          <div class="colaborador-tarjeta">
+            <div class="colaborador-imagen"> <img src="../img/colaboradores/EdgarCorte.jpg" />
+            </div>
+            <div class="colaborador-detalles">
+              <h3 class="colaborador-nombre">Edgar Cortés Gallardo Medina</h3>
+              <p class="colaborador-rol">Developer</p>
+              <hr class="colaborador-separacion" />
+              <div class="colaborador-contacto">&nbsp;
+              </div>
+              <p id="edgarmed" class="mobile colaborador-biografia"> Edgar Cortés Gallardo Medina was born in CDMX on
+                September 22, 1997. He is studying a degree in Mechatronic Engineering at the Tecnológico de Monterrey.
+                He is currently developing a vehicular platform for the development of intelligent algorithms in
+                engineering and research projects at the Research Center in Microsystems and Biodesign. His areas of
+                interest are Artificial Intelligence applied to the partial and total assistance in an intelligent
+                vehicle, the fusion of data and sensors, and the area of opportunity presented by these new technologies
+                in the internet of vehicles.
+              </p>
+            </div>
+            <div class="show-more-wrapper mobile">
+              <div data-colaborador="edgarmed" class="show-more-button">Read More <img
+                  src="../img/icons/icon-cheveron-down.svg" />
+              </div>
+            </div>
+          </div>
+          <p class="desktop colaborador-biografia">Edgar Cortés Gallardo Medina was born in CDMX on September 22, 1997.
+            He is studying a degree in Mechatronic Engineering at the Tecnológico de Monterrey. He is currently
+            developing a vehicular platform for the development of intelligent algorithms in engineering and research
+            projects at the Research Center in Microsystems and Biodesign. His areas of interest are Artificial
+            Intelligence applied to the partial and total assistance in an intelligent vehicle, the fusion of data and
+            sensors, and the area of opportunity presented by these new technologies in the internet of vehicles.
+          </p>
+        </div>
+        <h3 class="subtitle">Supervisor</h3> <a href="../contacto/index.html">Dr. Rogelio Bustamente Bello</a>
+        <a>Dr. Javier Izquierdo Reyes</a>
+        <a>Msc. Israel Cayetano</a>
+        <a>Msc. Luis Alberto Curiel Ramirez</a> -->
+      </div>
+    </div>
   </div>
   <footer>
     <div class="footer-left"> <a target="_blank" href="https://tec.mx/es"><img
