Correct typos on ICARUS project descriptions. Solve GH-14

--- a/proyectos/icarus.html
+++ b/proyectos/icarus.html
@@ -175,7 +175,7 @@
                 </div>
               
                 <div class="col-7">
-                    <p class="title">Metología para al evaluación de la experiencia del usuario</p>
+                    <p class="title">Metodología para la evaluación de la experiencia del usuario</p>
                     <div class="fader"></div>
                 </div>
                 <div class="info">
@@ -200,7 +200,7 @@
                 </div>
               
                 <div class="col-7">
-                    <p class="title">ICARUS: Estructura e interface EMG </p>
+                    <p class="title">ICARUS: Estructura e Interfaz EMG </p>
                     <div class="fader"></div>
                 </div>
                 <div class="info">
