Add all students - Solve GH-4

--- a/equipo/estudiantes.html
+++ b/equipo/estudiantes.html
@@ -54,10 +54,10 @@
   </header>
 
   <div class="content no-slider">
+
     <h4>Estudiantes</h4>
     <p>Todos los estudiantes que se han involucrado en el CIMB.</p>
     <h5>Diseño Web</h5>
-
     <div class="columns">
       <div class="column is-one-third">
         <ul>
@@ -70,41 +70,86 @@
         <ul>
           <li>Kai Kawasaki Ueda</li>
           <li>Juan Carlos Pichardo Vicencio</li>
+          <li>Ana Carolina Arellano Álvarez</li>
         </ul>
       </div>
       <div class="column is-one-third">
         <ul>
           <li>Rafael Enrique Fierro Mendez</li>
           <li>José Miguel Gallardo Tabares</li>
+          <li>Mauville</li>
         </ul>
       </div>
     </div>
 
+    <h5>ADMAS</h5>
+    <b>Verano 2019</b>
     <div class="columns">
       <div class="column is-one-third">
         <ul>
-          <li>Jorge Espinosa</li>
-          <li>Carlos Aguirre Orozco</li>
-          <li>Axel Octavio Meinguer Estrada</li>
+          <li>Erick Velazquez Lara</li>
+          <li>Rosa Maria Miranda Alarcon</li>
+          <li>Jose Alejandro Muñoz Orozco</li>
+          <li>Jose Ramon Luna Rosale</li>
+          <li>Rogelio Velasco Mondragón</li>
+          <li>Alejandro Salcedo Velasquez</li>
+          <li>Gerardo Nuño Carmona</li>
+          <li>Israel Chávez García</li>
+          <li>Daniela Magallán Ramírez</li>
+          <li>Arath Marin Ramírez</li>
+          <li>David Martínez Aguilar</li>
+          <li>Edgar López Valdés</li>
+          <li>Diego Jiménez Ríos</li>
+          <li>José Sebastian Reyes López</li>
+          <li>Juan Pablo Valverde Lopez</li>
+          <li>Pablo Marusich Aviña</li>
+          <li>Jaime Aranda</li>
         </ul>
       </div>
       <div class="column is-one-third">
         <ul>
-          <li>Kai Kawasaki Ueda</li>
-          <li>Juan Carlos Pichardo Vicencio</li>
+          <li>Andres Bustamante Diaz</li>
+          <li>Mariana Molinar Zenteno</li>
+          <li>Vanesa Yamilet Rico Espinosa</li>
+          <li>Maria Isabel Arauz Morales</li>
+          <li>Eloy Pascual Belda</li>
+          <li>Maria Isabel Arauz Morales</li>
+          <li>Juan Gascón Repullés</li>
+          <li>Erick Velazquez Lara</li>
+          <li>Marcos Ulises Peña Partida</li>
+          <li>Vanesa Yamilet Rico Espinosa</li>
+          <li>Andrea Ponce de León Serrano</li>
+          <li>David Octavio Fontes</li>
+          <li>Anshula Gandhi</li>
+          <li>Karen Guiza Vara</li>
+          <li>In Joong Kim</li>
+          <li>Fernando Rios Chavez</li>
+          <li>Eduardo Frutos Dordelli</li>
         </ul>
       </div>
       <div class="column is-one-third">
         <ul>
-          <li>Rafael Enrique Fierro Mendez</li>
-          <li>José Miguel Gallardo Tabares</li>
+          <li>Edgar Adan Astie Ruiz</li>
+          <li>Josue Gonzalez Quintos</li>
+          <li>Carlos Alberto Castillo Neri</li>
+          <li>Gabriel Garcia Ramirez</li>
+          <li>José Ángel González González</li>
+          <li>Laura Camila</li>
+          <li>Pablo Ivan Barajas Urbina</li>
+          <li>Francisco Javier Nambo Rodriguez</li>
+          <li>José Ángel González González</li>
+          <li>Bernardo Alejandro Urriza Arellano</li>
+          <li>Atzin Nicole Gil Solis</li>
+          <li>Dominico Morales Ortiz</li>
+          <li>Daniela Chipuli Silva</li>
+          <li>Gabriela Arzate Bello</li>
+          <li>Carlos Rodrigo Rogel Hurtado</li>
+          <li>Alfredo Zhu Chen</li>
+          <li>Rosa Maria Miranda Alarcon</li>
+          <li>Jose Alejandro Muñoz Orozco</li>
         </ul>
       </div>
-    </div>
-
-
-
-    <h5>ADMAS</h5> <b>Enero 2019</b>
+    </div> <b>Enero 2019</b>
     <div class="columns">
       <div class="column is-one-third">
         <ul>
@@ -384,7 +429,73 @@
         </ul>
       </div>
     </div>
-    <h5>Domótica Emocional</h5> <b>Enero 2019</b>
+    <h5>Domótica Emocional</h5>
+    <b>Agosto 2019</b>
+    <div class="columns">
+      <div class="column is-one-third">
+        <ul>
+          <li>Erick David Gil Jackson</li>
+          <li>Diego Delgado Fajardo</li>
+          <li>Alan Giles Gamboa</li>
+          <li>Ana Lourdes Morales Cortés</li>
+          <li>Luis Eduardo Cruz Vazquez</li>
+          <li>Ricardo Andres Aldama Gonzalez</li>
+          <li>Dinora Montserrat Gómez Millán</li>
+          <li>Pablo Andrés Obregón Carceller</li>
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <ul>
+          <li>Jorge Alberto Figueroa Peart</li>
+          <li>Diego Aguilar Gutiérrez</li>
+          <li>Isabel Guadalupe Pinzón Aroche</li>
+          <li>Alejandro Moreno Loza</li>
+          <li>María Fernanda Patiño Clavel</li>
+          <li>Paulina del Carmen Galindo Galvez</li>
+
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <ul>
+
+          <li>Ximena Centeno Torres</li>
+          <li>Misael Sanchez Resendiz</li>
+          <li>Luis Manuel Ayala Hernandez</li>
+          <li>Emerson Núñez Santos</li>
+          <li>Rigoberto Antonio Pano Gómez</li>
+          <li>Víctor Manuel Romero Méndez</li>
+          <li>Armando Rodriguez Mendoza</li>
+          <li>Julieta Galván</li>
+        </ul>
+      </div>
+    </div>
+    <b>Verano 2019</b>
+    <div class="columns">
+      <div class="column is-one-third">
+        <ul>
+          <li>Juan Manuel Tinoco Cabañas</li>
+          <li>Rodrigo Salgado Aguilar</li>
+          <li>José Sebastian Reyes López</li>
+          <li>Jorge Ramirez Sanchez</li>
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <ul>
+          <li>Ricardo Andres Aldama Gonzalez</li>
+          <li>Erick David Gil Jackson</li>
+          <li>Jorge Arturo Alcalá Hernandez</li>
+          <li>Osiris Acolhua Frías Castillejos</li>
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <ul>
+          <li>Maria Fernanda Patiño Clavel</li>
+          <li>Isabel Guadalupe Pinzon Aroche</li>
+          <li>Mariela Ramírez Garcia</li>
+        </ul>
+      </div>
+    </div>
+    <b>Enero 2019</b>
     <div class="columns">
       <div class="column is-one-third">
         <ul>
@@ -565,7 +676,66 @@
         </ul>
       </div>
     </div>
-    <h5>ExoDUX</h5> <b>Enero 2019</b>
+    <h5>ExoDUX</h5>
+
+    <b>Agosto 2019</b>
+    <div class="columns">
+      <div class="column is-one-third">
+        <ul>
+          <li>Fernando Guzmán Román</li>
+          <li>Daniel Vela Jarquin</li>
+          <li>Carolina Guerrero Meza</li>
+          <li>Gabriela Rodríguez Gómez</li>
+          <li>Angel Avila Gutierrez</li>
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <ul>
+          <li>José Alonso Rodríguez Vidal</li>
+          <li>Eduardo Cornejo Álvarez</li>
+          <li>Laura Gabriela Campos Garnica</li>
+          <li>Alejandro Garma Oehmichen</li>
+          <li>Diego Ramirez Torres</li>
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <ul>
+          <li>Brayan Camilo Castro Sanchez</li>
+          <li>Fitzgerald Leonard Gerardo Toro Quitian</li>
+          <li>Ilse Leticia Ortega</li>
+          <li>Carlos Arturo Alvarado</li>
+          <li>Mauricio Marín Espinosa</li>
+        </ul>
+      </div>
+    </div>
+    <b>Verano 2019</b>
+    <div class="columns">
+      <div class="column is-one-third">
+        <ul>
+          <li>Alejandro Garma Oehmichen</li>
+          <li>Gabriela Rodríguez Gómez</li>
+          <li>Diego Ramirez Torres</li>
+          <li>Laura Gabriela Campos Garnica</li>
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <ul>
+          <li>Mauricio Marín Espinosa</li>
+          <li>Eduardo Cornejo Álvarez</li>
+          <li>José Alonso Rodríguez Vidal</li>
+          <li>Mauricio Cano Galván</li>
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <ul>
+          <li>Uriel Sierra Cruz</li>
+          <li>Juan Pablo Pérez Ramírez</li>
+          <li>Hazel Ailed Aparicio Rojas</li>
+          <li>Jessica Mariana Rodríguez Ramírez</li>
+        </ul>
+      </div>
+    </div>
+    <b>Enero 2019</b>
     <div class="columns">
       <div class="column is-one-third">
         <ul>
@@ -669,6 +839,7 @@
       </div>
     </div>
   </div>
+
 
   <footer>
     <div class="footer-left"> <a target="_blank" href="https://tec.mx/es"><img
