--- a/equipo/estudiantes-eng.html
+++ b/equipo/estudiantes-eng.html
@@ -52,7 +52,7 @@
 
   <div class="content no-slider">
     <h4>Students</h4>
-    <p>All students that have been involved in CIMB.</p>
+    <p>Every student that has participated at CIMB</p>
     <h5>Web Design</h5>
     <div class="columns">
       <div class="column is-one-third">
@@ -66,16 +66,86 @@
         <ul>
           <li>Kai Kawasaki Ueda</li>
           <li>Juan Carlos Pichardo Vicencio</li>
+          <li>Ana Carolina Arellano Álvarez</li>
         </ul>
       </div>
       <div class="column is-one-third">
         <ul>
           <li>Rafael Enrique Fierro Mendez</li>
           <li>José Miguel Gallardo Tabares</li>
+          <li>Mauville</li>
         </ul>
       </div>
     </div>
-    <h5>ADMAS</h5> <b>January 2019</b>
+
+    <h5>ADMAS</h5>
+    <b>Summer 2019</b>
+    <div class="columns">
+      <div class="column is-one-third">
+        <ul>
+          <li>Erick Velazquez Lara</li>
+          <li>Rosa Maria Miranda Alarcon</li>
+          <li>Jose Alejandro Muñoz Orozco</li>
+          <li>Jose Ramon Luna Rosale</li>
+          <li>Rogelio Velasco Mondragón</li>
+          <li>Alejandro Salcedo Velasquez</li>
+          <li>Gerardo Nuño Carmona</li>
+          <li>Israel Chávez García</li>
+          <li>Daniela Magallán Ramírez</li>
+          <li>Arath Marin Ramírez</li>
+          <li>David Martínez Aguilar</li>
+          <li>Edgar López Valdés</li>
+          <li>Diego Jiménez Ríos</li>
+          <li>José Sebastian Reyes López</li>
+          <li>Juan Pablo Valverde Lopez</li>
+          <li>Pablo Marusich Aviña</li>
+          <li>Jaime Aranda</li>
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <ul>
+          <li>Andres Bustamante Diaz</li>
+          <li>Mariana Molinar Zenteno</li>
+          <li>Vanesa Yamilet Rico Espinosa</li>
+          <li>Maria Isabel Arauz Morales</li>
+          <li>Eloy Pascual Belda</li>
+          <li>Maria Isabel Arauz Morales</li>
+          <li>Juan Gascón Repullés</li>
+          <li>Erick Velazquez Lara</li>
+          <li>Marcos Ulises Peña Partida</li>
+          <li>Vanesa Yamilet Rico Espinosa</li>
+          <li>Andrea Ponce de León Serrano</li>
+          <li>David Octavio Fontes</li>
+          <li>Anshula Gandhi</li>
+          <li>Karen Guiza Vara</li>
+          <li>In Joong Kim</li>
+          <li>Fernando Rios Chavez</li>
+          <li>Eduardo Frutos Dordelli</li>
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <ul>
+          <li>Edgar Adan Astie Ruiz</li>
+          <li>Josue Gonzalez Quintos</li>
+          <li>Carlos Alberto Castillo Neri</li>
+          <li>Gabriel Garcia Ramirez</li>
+          <li>José Ángel González González</li>
+          <li>Laura Camila</li>
+          <li>Pablo Ivan Barajas Urbina</li>
+          <li>Francisco Javier Nambo Rodriguez</li>
+          <li>José Ángel González González</li>
+          <li>Bernardo Alejandro Urriza Arellano</li>
+          <li>Atzin Nicole Gil Solis</li>
+          <li>Dominico Morales Ortiz</li>
+          <li>Daniela Chipuli Silva</li>
+          <li>Gabriela Arzate Bello</li>
+          <li>Carlos Rodrigo Rogel Hurtado</li>
+          <li>Alfredo Zhu Chen</li>
+          <li>Rosa Maria Miranda Alarcon</li>
+          <li>Jose Alejandro Muñoz Orozco</li>
+        </ul>
+      </div>
+    </div> <b>January 2019</b>
     <div class="columns">
       <div class="column is-one-third">
         <ul>
@@ -107,14 +177,14 @@
           <li>Aaron Said Garcia Chavez</li>
           <li>Rosa Maria Miranda Alarcon</li>
           <li>Jose Alejandro Muñoz Orozco</li>
-          <li>Enrique Navarro Torres Arpi</li>
           <li>Andrea Beatriz Becerra Bolaños</li>
+          <li>Enrique Navarro Torres Arpi</li>
           <li>Edgar Adan Astie Ruiz</li>
         </ul>
       </div>
       <div class="column is-one-third">
         <ul>
-          <li>Francisco Javier Nambo</li>
+          <li>Francisco Javier Nambo </li>
           <li>Angel Larballo Cremades</li>
           <li>Angeles</li>
           <li>Edgar Gomez ramos</li>
@@ -355,7 +425,73 @@
         </ul>
       </div>
     </div>
-    <h5>Emotional Domotics</h5> <b>January 2019</b>
+    <h5>Emotional Domotics</h5>
+    <b>August 2019</b>
+    <div class="columns">
+      <div class="column is-one-third">
+        <ul>
+          <li>Erick David Gil Jackson</li>
+          <li>Diego Delgado Fajardo</li>
+          <li>Alan Giles Gamboa</li>
+          <li>Ana Lourdes Morales Cortés</li>
+          <li>Luis Eduardo Cruz Vazquez</li>
+          <li>Ricardo Andres Aldama Gonzalez</li>
+          <li>Dinora Montserrat Gómez Millán</li>
+          <li>Pablo Andrés Obregón Carceller</li>
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <ul>
+          <li>Jorge Alberto Figueroa Peart</li>
+          <li>Diego Aguilar Gutiérrez</li>
+          <li>Isabel Guadalupe Pinzón Aroche</li>
+          <li>Alejandro Moreno Loza</li>
+          <li>María Fernanda Patiño Clavel</li>
+          <li>Paulina del Carmen Galindo Galvez</li>
+
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <ul>
+
+          <li>Ximena Centeno Torres</li>
+          <li>Misael Sanchez Resendiz</li>
+          <li>Luis Manuel Ayala Hernandez</li>
+          <li>Emerson Núñez Santos</li>
+          <li>Rigoberto Antonio Pano Gómez</li>
+          <li>Víctor Manuel Romero Méndez</li>
+          <li>Armando Rodriguez Mendoza</li>
+          <li>Julieta Galván</li>
+        </ul>
+      </div>
+    </div>
+    <b>Summer 2019</b>
+    <div class="columns">
+      <div class="column is-one-third">
+        <ul>
+          <li>Juan Manuel Tinoco Cabañas</li>
+          <li>Rodrigo Salgado Aguilar</li>
+          <li>José Sebastian Reyes López</li>
+          <li>Jorge Ramirez Sanchez</li>
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <ul>
+          <li>Ricardo Andres Aldama Gonzalez</li>
+          <li>Erick David Gil Jackson</li>
+          <li>Jorge Arturo Alcalá Hernandez</li>
+          <li>Osiris Acolhua Frías Castillejos</li>
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <ul>
+          <li>Maria Fernanda Patiño Clavel</li>
+          <li>Isabel Guadalupe Pinzon Aroche</li>
+          <li>Mariela Ramírez Garcia</li>
+        </ul>
+      </div>
+    </div>
+    <b>January 2019</b>
     <div class="columns">
       <div class="column is-one-third">
         <ul>
@@ -379,7 +515,7 @@
       <div class="column is-one-third">
         <ul>
           <li>Alix Paulina Guzman Martinez</li>
-          <li>Maria del Rosario Bandala</li>
+          <li>Maria del Rosario Bandala </li>
           <li>Juan Carlos Rendon Lopez</li>
           <li>Ricardo Andres Aldama Gonzalez</li>
           <li>Erick David Gil Jackson</li>
@@ -492,7 +628,7 @@
           <li>Miguel Emiliano González Hernández</li>
         </ul>
       </div>
-    </div> <b>Past Years</b>
+    </div> <b>Años Pasados</b>
     <div class="columns">
       <div class="column is-one-third">
         <ul>
@@ -536,7 +672,66 @@
         </ul>
       </div>
     </div>
-    <h5>ExoDUX</h5> <b>January 2019</b>
+    <h5>ExoDUX</h5>
+
+    <b>August 2019</b>
+    <div class="columns">
+      <div class="column is-one-third">
+        <ul>
+          <li>Fernando Guzmán Román</li>
+          <li>Daniel Vela Jarquin</li>
+          <li>Carolina Guerrero Meza</li>
+          <li>Gabriela Rodríguez Gómez</li>
+          <li>Angel Avila Gutierrez</li>
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <ul>
+          <li>José Alonso Rodríguez Vidal</li>
+          <li>Eduardo Cornejo Álvarez</li>
+          <li>Laura Gabriela Campos Garnica</li>
+          <li>Alejandro Garma Oehmichen</li>
+          <li>Diego Ramirez Torres</li>
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <ul>
+          <li>Brayan Camilo Castro Sanchez</li>
+          <li>Fitzgerald Leonard Gerardo Toro Quitian</li>
+          <li>Ilse Leticia Ortega</li>
+          <li>Carlos Arturo Alvarado</li>
+          <li>Mauricio Marín Espinosa</li>
+        </ul>
+      </div>
+    </div>
+    <b>Summer 2019</b>
+    <div class="columns">
+      <div class="column is-one-third">
+        <ul>
+          <li>Alejandro Garma Oehmichen</li>
+          <li>Gabriela Rodríguez Gómez</li>
+          <li>Diego Ramirez Torres</li>
+          <li>Laura Gabriela Campos Garnica</li>
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <ul>
+          <li>Mauricio Marín Espinosa</li>
+          <li>Eduardo Cornejo Álvarez</li>
+          <li>José Alonso Rodríguez Vidal</li>
+          <li>Mauricio Cano Galván</li>
+        </ul>
+      </div>
+      <div class="column is-one-third">
+        <ul>
+          <li>Uriel Sierra Cruz</li>
+          <li>Juan Pablo Pérez Ramírez</li>
+          <li>Hazel Ailed Aparicio Rojas</li>
+          <li>Jessica Mariana Rodríguez Ramírez</li>
+        </ul>
+      </div>
+    </div>
+    <b>January 2019</b>
     <div class="columns">
       <div class="column is-one-third">
         <ul>
@@ -630,7 +825,6 @@
           <li>Brayan Camilo Castro Sanchez</li>
         </ul>
       </div>
-
       <div class="column is-one-third">
         <b>UNIVERSIDAD POLITECNICA DE VALENCIA - ESPAÑA</b>
         <ul>
@@ -639,36 +833,36 @@
         </ul>
       </div>
     </div>
-
-    <footer>
-      <div class="footer-left"> <a target="_blank" href="https://tec.mx/es"><img
-            src="../img/logos/logo-tec-largo.png" /></a> <a href="../index-eng.html"><img
-            src="../img/logos/logo-cimb.png" /></a>
-      </div>
-      <div class="footer-center">
-        <h3>Site Map</h3>
-        <ul>
-          <li><a href="../index-eng.html">Start</a></li>
-          <li><a href="../proyectos/index-eng.html">Projects</a></li>
-          <li><a href="../videos/index-eng.html">Videos</a></li>
-          <li><a href="../divulgacion/index-eng.html">Divulgation</a></li>
-          <li><a href="../contacto/index-eng.html">Contact</a></li>
-          <li><a href="../blog/index.html">Blog</a></li>
-        </ul>
-      </div>
-      <div class="footer-right">
-        <h3>Contact</h3>
-        <ul>
-          <li>Calle del Puente #222 Col. Ejidos de Huipulco, Tlalpan C.P. 14380, México D.F.</li>
-          <li><a>Dr. Martín Rogelio Bustamante Bello</a></li>
-          <li><a>Cel: 553075 1447</a></li>
-          <li><a>Mail: rbustama@itesm.mx</a></li>
-          <li class="contact-socials"> <a target="_blank" href="https://www.facebook.com">&nbsp;</a> <a target="_blank"
-              href="https://www.researchgate.net/profile/Rogelio_Bustamante-Bello">&nbsp;</a> </li>
-        </ul>
-      </div>
-    </footer>
-    <p class="trademark">Instituto Tecnológico y de Estudios Superiores de Monterrey. México 2018.</p>
+  </div>
+  <footer>
+    <div class="footer-left"> <a target="_blank" href="https://tec.mx/es"><img
+          src="../img/logos/logo-tec-largo.png" /></a> <a href="../index-eng.html"><img
+          src="../img/logos/logo-cimb.png" /></a>
+    </div>
+    <div class="footer-center">
+      <h3>Site Map</h3>
+      <ul>
+        <li><a href="../index-eng.html">Start</a></li>
+        <li><a href="../proyectos/index-eng.html">Projects</a></li>
+        <li><a href="../videos/index-eng.html">Videos</a></li>
+        <li><a href="../divulgacion/index-eng.html">Divulgation</a></li>
+        <li><a href="../contacto/index-eng.html">Contact</a></li>
+        <li><a href="../blog/index.html">Blog</a></li>
+      </ul>
+    </div>
+    <div class="footer-right">
+      <h3>Contact</h3>
+      <ul>
+        <li>Calle del Puente #222 Col. Ejidos de Huipulco, Tlalpan C.P. 14380, México D.F.</li>
+        <li><a>Dr. Martín Rogelio Bustamante Bello</a></li>
+        <li><a>Cel: 553075 1447</a></li>
+        <li><a>Mail: rbustama@itesm.mx</a></li>
+        <li class="contact-socials"> <a target="_blank" href="https://www.facebook.com">&nbsp;</a> <a target="_blank"
+            href="https://www.researchgate.net/profile/Rogelio_Bustamante-Bello">&nbsp;</a> </li>
+      </ul>
+    </div>
+  </footer>
+  <p class="trademark">Instituto Tecnológico y de Estudios Superiores de Monterrey. México 2018.</p>
 </body>
 
 <script src="../js/navbar.js"></script>
