--- a/divulgacion/index.html
+++ b/divulgacion/index.html
@@ -100,7 +100,7 @@
                         Transportation </a></li>
                 <br />
                 <li><a href="https://ieeexplore.ieee.org/document/8363378" target="_blank">
-                        2011 | An industry-academia model for research </a></li>
+                        2008 | An industry-academia model for research </a></li>
                 <br />
 
             </ul>
@@ -110,7 +110,12 @@
             <h5> </h5>
             <h6>Msc. Luis Alberto Curiel Ramírez</h6>
             <ul>
-                <li><a href="https://link.springer.com/article/10.1007/s12008-019-00619-x" target="_blank"> 2019 | Hardware in the loop framework proposal for a semi-autonomous car architecture in a closed route environment</a></li>
+                <li><a href="https://ieeexplore.ieee.org/document/8768841" target="_blank"> 
+                    2019 | A Simulation Approach of the Internet of Intelligent Vehicles for Closed Routes in Urban Environments  </a></li>
+                <br />
+                <li><a href="https://link.springer.com/article/10.1007/s12008-019-00619-x" target="_blank"> 2019 |
+                        Hardware in the loop framework proposal for a semi-autonomous car architecture in a closed route
+                        environment</a></li>
                 <br />
                 <li><a href="https://ieeexplore.ieee.org/document/8743141/" target="_blank">
                         2019 | Analysis and Approach of Semi-Autonomous Driving Architectures</a></li>
@@ -171,6 +176,10 @@
                 <br />
                 <li><a href="https://ieeexplore.ieee.org/document/8743117/" target="_blank">
                         2019 | Interpretation and Emulation for Telegrams of the KNX Standard on MATLAB Simulink</a>
+                </li>
+                <br />
+                <li><a href="https://link.springer.com/article/10.1007/s12008-019-00624-0" target="_blank">
+                        2019 | Communication system development for emotional domotics interactive space</a>
                 </li>
                 <br />
 
