--- a/divulgacion/index.html
+++ b/divulgacion/index.html
@@ -147,6 +147,9 @@
             <!-- autor-->
             <h6>Dr. Sergio Alberto Navarro Tuch</h6>
             <ul>
+                <li><a href="https://ieeexplore.ieee.org/document/8792595" 
+                        target="_blank">2019 | Open Innovation Laboratories as Enabling Resources to Reach the Vision of Education 4.0  </a></li>
+                <br>
                 <li><a href="https://link.springer.com/article/10.1007/s12008-019-00598-z?wt_mc=Internal.Event.1.SEM.ArticleAuthorOnlineFirst&utm_source=ArticleAuthorOnlineFirst&utm_medium=email&utm_content=AA_en_06082018&ArticleAuthorOnlineFirst_20190606"
                         target="_blank">2019 | Emotional Domotics: a system and experimental model development for UX
                         implementations</a></li>
