--- a/divulgacion/index-eng.html
+++ b/divulgacion/index-eng.html
@@ -78,6 +78,8 @@
                 <li><a href="https://ieeexplore.ieee.org/document/8743135" target="_blank"> 2019 | Perspective of
                         Autonomous Driving in Mexico </a></li>
                 <br />
+                <li><a href="https://ieeexplore.ieee.org/document/8363378" target="_blank"> 2018 | An industry-academia
+                        model for research </a></li> <br />
                 <li><a href="https://link.springer.com/article/10.1007/s12008-018-0473-9" target="_blank">2018 | Emotion
                         recognition for semi-autonomous vehicles framework</a></li>
                 <br />
@@ -95,8 +97,6 @@
                         target="_blank">2016 | Review of Passive BCI framework for Advanced Driver Assistance Systems in
                         Intelligent Transportation </a></li>
                 <br />
-                <li><a href="https://ieeexplore.ieee.org/document/8363378" target="_blank"> 2011 | An industry-academia
-                        model for research </a></li> <br />
             </ul>
 
         </div>
@@ -104,7 +104,12 @@
             <h5> </h5>
             <h6>Msc. Luis Alberto Curiel Ramírez</h6>
             <ul>
-                <li><a href="https://link.springer.com/article/10.1007/s12008-019-00619-x" target="_blank"> 2019 | Hardware in the loop framework proposal for a semi-autonomous car architecture in a closed route environment</a></li>
+                <li><a href="https://ieeexplore.ieee.org/document/8768841" target="_blank"> 
+                    2019 | A Simulation Approach of the Internet of Intelligent Vehicles for Closed Routes in Urban Environments  </a></li>
+                <br />
+                <li><a href="https://link.springer.com/article/10.1007/s12008-019-00619-x" target="_blank"> 2019 |
+                        Hardware in the loop framework proposal for a semi-autonomous car architecture in a closed route
+                        environment</a></li>
                 <br />
                 <li><a href="https://ieeexplore.ieee.org/document/8743141/" target="_blank"> 2019 | Analysis and
                         Approach of Semi-Autonomous Driving Architectures</a></li>
@@ -132,6 +137,9 @@
             <!-- autor-->
             <h6>Dr. Sergio Alberto Navarro Tuch</h6>
             <ul>
+                <li><a href="https://ieeexplore.ieee.org/document/8792595" target="_blank">2019 | Open Innovation
+                        Laboratories as Enabling Resources to Reach the Vision of Education 4.0 </a></li>
+                <br>
                 <li><a href="https://link.springer.com/article/10.1007/s12008-019-00598-z?wt_mc=Internal.Event.1.SEM.ArticleAuthorOnlineFirst&utm_source=ArticleAuthorOnlineFirst&utm_medium=email&utm_content=AA_en_06082018&ArticleAuthorOnlineFirst_20190606"
                         target="_blank">2019 | Emotional Domotics: a system and experimental model development for UX
                         implementations</a></li>
@@ -155,9 +163,12 @@
             </ul>
             <h6>Ing. Ariel Alejandro Lopez Aguilar</h6>
             <ul>
-                <br />
                 <li><a href="https://ieeexplore.ieee.org/document/8743117/" target="_blank">
                         2019 | Interpretation and Emulation for Telegrams of the KNX Standard on MATLAB Simulink</a>
+                </li>
+                <br />
+                <li><a href="https://link.springer.com/article/10.1007/s12008-019-00624-0" target="_blank">
+                        2019 | Communication system development for emotional domotics interactive space</a>
                 </li>
                 <br />
 
