Add video, Solve GH-37 Solve GH-35

--- a/equipo/estudiantes-eng.html
+++ b/equipo/estudiantes-eng.html
@@ -817,10 +817,10 @@
         </ul>
       </div>
       <div class="column is-one-third">
-        <b>UNIVERSIDAD JULIO GARABITO - COLOMBIA</b>
+        <b>ESCUELA COLOMBIANA DE INGENIERÍA JULIO GARAVITO</b>
         <ul>
           <li>Kevin Roger Cardenas Mogollon</li>
-          <li>Laura Camila Loaiza Carbajal</li>
+          <li>Laura Camila Loaiza Carvajal</li>
           <li>Fitzgerald Leonard Gerardo Toro Quitian</li>
           <li>Brayan Camilo Castro Sanchez</li>
         </ul>
