--- a/videos/domotica-eng.html
+++ b/videos/domotica-eng.html
@@ -92,6 +92,13 @@
                 </div>
                 <span>Interview with Foro TV</span>
             </div>
+            <div class="video-item">
+                <div class="video-wrapper">
+                    <iframe src="https://www.youtube.com/embed/8hQWKPT1KSw" allow="autoplay; encrypted-media"
+                        allowfullscreen="" frameborder="0"></iframe>
+                </div>
+                <span>Avatar 2.0</span>
+            </div>
         </div>
     </div>
     <footer>
