--- a/videos/domotica.html
+++ b/videos/domotica.html
@@ -91,6 +91,13 @@
                 </div>
                 <span>Entrevista de la presentación de domotica emocional por Foto TV.</span>
             </div>
+            <div class="video-item">
+                <div class="video-wrapper">
+                    <iframe src="https://www.youtube.com/embed/8hQWKPT1KSw" allow="autoplay; encrypted-media"
+                        allowfullscreen="" frameborder="0"></iframe>
+                </div>
+                <span>Avatar 2.0</span>
+            </div>
         </div>
 
     </div>
