Correct Team page. Solve GH-31

--- a/equipo/agradecimientos-eng.html
+++ b/equipo/agradecimientos-eng.html
@@ -16,6 +16,7 @@
     <link rel="icon" type="image/png" href="../img/icons/favicon.png">
     <link rel="stylesheet" href="../css/footer.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"         crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -108,11 +109,11 @@
 
             <h5 class="subtitle">Teachers</h5>
                 <ul>
-                    <li>Dr. José Luis Pablos Hach</li>
+                    <li>Mtro. José Luis Pablos Hach</li>
                     <li>Dr. Rafael Ferrer Flores</li>
                     <li>Dr. Jorge Eduardo Brieva Rico</li>
                     <li>Dr. Raúl Crespo Saucedo</li>
-                    <li>Dr. Silvia Covarrubias</li>
+                    <li>Mtra. Silvia Covarrubias</li>
                     <li>Dr. Edgar Omar López Caudana</li>
                 </ul>
         </div>
