--- a/equipo/agradecimientos.html
+++ b/equipo/agradecimientos.html
@@ -109,11 +109,11 @@
 
             <h5 class="subtitle">Profesores</h5>
                 <ul>
-                    <li>Dr. José Luis Pablos Hach</li>
+                    <li>Mtro. José Luis Pablos Hach</li>
                     <li>Dr. Rafael Ferrer Flores</li>
                     <li>Dr. Jorge Eduardo Brieva Rico</li>
                     <li>Dr. Raúl Crespo Saucedo</li>
-                    <li>Dra. Silvia Covarrubias</li>
+                    <li>Mtra. Silvia Covarrubias</li>
                     <li>Dr. Edgar Omar López Caudana</li>
                 </ul>
         </div>
