--- a/equipo/index.html
+++ b/equipo/index.html
@@ -92,7 +92,7 @@
                                 <h4 class="colaborador-contacto-titulo">Contacto</h4>
                                 <div class="colaborador-contacto-enlaces">
                                     <a href="tel:5530751447"><img src="../img/icons/icon-call.svg"></a>
-                                    <a href="mailto:rbustama@itesm.mx"><img src="../img/icons/icon-mail.svg"></a>
+                                    <a href="mailto:rbustama@tec.mx"><img src="../img/icons/icon-mail.svg"></a>
                                     <a href="https://www.researchgate.net/profile/Rogelio_Bustamante-Bello"
                                         target="_blank"><i class="fab fa-researchgate"></i></a>
                                 </div>
@@ -154,7 +154,7 @@
                             <div class="colaborador-contacto">
                                 <h4 class="colaborador-contacto-titulo">Contacto</h4>
                                 <div class="colaborador-contacto-enlaces">
-                                    <img src="../img/icons/icon-mail.svg">
+                                    <a href="mailto:armolina@tec.mx"><img src="../img/icons/icon-mail.svg"></a>
                                     <a href="https://www.researchgate.net/profile/Arturo_Molina2" target="_blank"><i
                                             class="fab fa-researchgate"></i></a>
                                 </div>
@@ -540,7 +540,7 @@
                             <div class="colaborador-contacto">
                                 <h4 class="colaborador-contacto-titulo">Contacto</h4>
                                 <div class="colaborador-contacto-enlaces">
-                                    <a href="mailto:jizquierdo.reyes@itesm.mx"><img
+                                    <a href="mailto:jizquierdo.reyes@tec.mx"><img
                                             src="../img/icons/icon-mail.svg"></a>
                                     <a href="https://www.researchgate.net/profile/Javier_Izquierdo-Reyes"
                                         target="_blank"><i class="fab fa-researchgate"></i></a>
@@ -590,7 +590,7 @@
                                 <h4 class="colaborador-contacto-titulo">Contacto</h4>
                                 <div class="colaborador-contacto-enlaces">
                                     <a href="tel:5529221949"><img src="../img/icons/icon-call.svg"></a>
-                                    <a href="mailto:a01333649@itesm.mx"><img src="../img/icons/icon-mail.svg"></a>
+                                    <a href="mailto:a01333649@tec.mx"><img src="../img/icons/icon-mail.svg"></a>
                                     <a href="https://www.researchgate.net/profile/Luis_Curiel" target="_blank"><i
                                             class="fab fa-researchgate"></i></a>
                                 </div>
@@ -640,7 +640,7 @@
                                 <h4 class="colaborador-contacto-titulo">Contacto</h4>
                                 <div class="colaborador-contacto-enlaces">
                                     <a href="tel:5522455990"><img src="../img/icons/icon-call.svg"></a>
-                                    <a href="mailto:a01215228@itesm.mx"><img src="../img/icons/icon-mail.svg"></a>
+                                    <a href="mailto:snavarro.tuch@tec.mx"><img src="../img/icons/icon-mail.svg"></a>
                                     <a href="https://www.researchgate.net/profile/Sergio_Navarro_Tuch"
                                         target="_blank"><i class="fab fa-researchgate"></i></a>
                                 </div>
@@ -682,7 +682,7 @@
                             <div class="colaborador-contacto">
                                 <h4 class="colaborador-contacto-titulo">Contacto</h4>
                                 <div class="colaborador-contacto-enlaces">
-                                    <a href="mailto:ariel.lopag@gmail.com"><img src="../img/icons/icon-mail.svg"></a>
+                                    <a href="mailto:ariel.lopag@tec.com"><img src="../img/icons/icon-mail.svg"></a>
                                     <a href="https://www.researchgate.net/profile/Ariel_Alejandro_Lopez_Aguilar"
                                         target="_blank"><i class="fab fa-researchgate"></i></a>
                                 </div>
@@ -734,7 +734,7 @@
                                 <h4 class="colaborador-contacto-titulo">Contacto</h4>
                                 <div class="colaborador-contacto-enlaces">
                                     <a href="tel:7751389075"><img src="../img/icons/icon-call.svg"></a>
-                                    <a href="mailto:a01271048@itesm.mx"><img src="../img/icons/icon-mail.svg"></a>
+                                    <a href="mailto:a01271048@tec.mx"><img src="../img/icons/icon-mail.svg"></a>
                                     <a href="https://www.researchgate.net/profile/Javier_De_La_Tejera_De_La_Pena"
                                         target="_blank"><i class="fab fa-researchgate"></i></a>
                                 </div>
@@ -832,7 +832,7 @@
                             <div class="colaborador-contacto">
                                 <h4 class="colaborador-contacto-titulo">Contacto</h4>
                                 <div class="colaborador-contacto-enlaces">
-
+                                    <a href="mailto:rolando.bautista@tec.com"><img src="../img/icons/icon-mail.svg"></a>
                                 </div>
                             </div>
 
@@ -886,7 +886,7 @@
                 <li>Calle del Puente #222 Col. Ejidos de Huipulco, Tlalpan C.P. 14380, México D.F.</li>
                 <li><a>Dr. Martín Rogelio Bustamante Bello</a></li>
                 <li><a>Cel: 553075 1447</a></li>
-                <li><a>Correo: rbustama@itesm.mx</a></li>
+                <li><a>Correo: rbustama@tec.mx</a></li>
                 <li class="contact-socials">
                     <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
                     <a href="https://www.researchgate.net/profile/Rogelio_Bustamante-Bello" target="_blank"><i
