--- a/equipo/estudiantes-eng.html
+++ b/equipo/estudiantes-eng.html
@@ -856,7 +856,7 @@
         <li>Calle del Puente #222 Col. Ejidos de Huipulco, Tlalpan C.P. 14380, México D.F.</li>
         <li><a>Dr. Martín Rogelio Bustamante Bello</a></li>
         <li><a>Cel: 553075 1447</a></li>
-        <li><a>Mail: rbustama@itesm.mx</a></li>
+        <li><a href="mailto:rbustama@tec.mx">Mail: rbustama@tec.mx</a></li>
         <li class="contact-socials"> <a target="_blank" href="https://www.facebook.com">&nbsp;</a> <a target="_blank"
             href="https://www.researchgate.net/profile/Rogelio_Bustamante-Bello">&nbsp;</a> </li>
       </ul>
