--- a/divulgacion/public/equipo/index-eng.html
+++ b/divulgacion/public/equipo/index-eng.html
@@ -127,6 +127,7 @@
                                 <div class="colaborador-contacto-enlaces">
                                     <img src="../img/icons/icon-mail.svg">
                                         <a href="https://www.researchgate.net/profile/Arturo_Molina2" target="_blank"><i class="fab fa-researchgate"></i></a>
+                                    <a href="mailto:armolina@tec.mx"><img src="../img/icons/icon-mail.svg"></a>
                                 </div>
                             </div>
 
@@ -387,6 +388,7 @@
                         </div>
                         <div class="colaborador-detalles">
                             <h3 class="colaborador-nombre">Eng. Javier Alberto de la Tejera de la Peña</h3>
+
                             <p class="colaborador-rol">Engineer</p>
                             <hr class="colaborador-separacion">
                             <div class="colaborador-contacto">
