--- a/divulgacion/public/equipo/index.html
+++ b/divulgacion/public/equipo/index.html
@@ -151,6 +151,7 @@
                                <div class="colaborador-contacto-enlaces">
                                    <img src="../img/icons/icon-mail.svg">
                                        <a href="https://www.researchgate.net/profile/Arturo_Molina2" target="_blank"><i class="fab fa-researchgate"></i></a>
+                                    <a href="mailto:armolina@tec.mx"><img src="../img/icons/icon-mail.svg"></a>
                                </div>
                            </div>
 
