--- a/proyectos/icarus.html
+++ b/proyectos/icarus.html
@@ -124,7 +124,7 @@
                 </div>
                 <div class="info">
                     <div class="extra-menu">
-                      <a href="../img/proyectos/ICARUS/ene19/sam-poster.jpg" target="_blank"><p>Descargar Poster</p></a>
+                      <a href="../img/proyectos/ICARUS/ene19/sam-poster.pdf" target="_blank"><p>Descargar Poster</p></a>
                     </div>
                     <div class="desc">
                         <b>Objetivo general</b>
