--- a/proyectos/icarus-eng.html
+++ b/proyectos/icarus-eng.html
@@ -107,7 +107,7 @@
                 </div>
                 <div class="info">
                     <div class="extra-menu">
-                      <a href="../img/proyectos/ICARUS/ene19/sam-poster.jpg" target="_blank"><p>Download Poster</p></a>
+                      <a href="../img/proyectos/ICARUS/ene19/sam-poster.pdf" target="_blank"><p>Download Poster</p></a>
                     </div>
                     <div class="desc">
                         <b>General Objective</b>
