Solve GH-48, Solve GH-49

--- a/equipo/estudiantes.html
+++ b/equipo/estudiantes.html
@@ -996,7 +996,7 @@
 
       <div id="ExoDUX97">
         <div class="col-7">
-          <p class="title">Agosto 2019</p>
+          <p class="title">Enero 2020</p>
           <div class="fader"></div>
         </div>
         <div class="info">
